// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/ColorDot color dots 1`] = `
Array [
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={
        Object {
          "background": "white",
        }
      }
    />
  </div>,
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={
        Object {
          "background": "rgb(100, 150, 250)",
        }
      }
    />
  </div>,
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={
        Object {
          "background": "rgba(100, 150, 250, .5)",
        }
      }
    />
  </div>,
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={
        Object {
          "background": "#000",
        }
      }
    />
  </div>,
]
`;

exports[`Storyshots components/ColorDot color dots with children 1`] = `
Array [
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={
        Object {
          "background": "#FFF",
        }
      }
    >
      <svg
        className="euiIcon euiIcon--medium"
        focusable="false"
        height="16"
        style={
          Object {
            "fill": "#000",
          }
        }
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 7h3.5a.5.5 0 1 1 0 1H8v3.5a.5.5 0 1 1-1 0V8H3.5a.5.5 0 0 1 0-1H7V3.5a.5.5 0 0 1 1 0V7zm-.5-7C11.636 0 15 3.364 15 7.5S11.636 15 7.5 15 0 11.636 0 7.5 3.364 0 7.5 0zm0 .882a6.618 6.618 0 1 0 0 13.236A6.618 6.618 0 0 0 7.5.882z"
          fillRule="evenodd"
        />
      </svg>
    </div>
  </div>,
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={
        Object {
          "background": "#666",
        }
      }
    >
      <svg
        className="euiIcon euiIcon--medium"
        focusable="false"
        height="16"
        style={
          Object {
            "fill": "#fff",
          }
        }
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.5 0C11.636 0 15 3.364 15 7.5S11.636 15 7.5 15 0 11.636 0 7.5 3.364 0 7.5 0zm0 .882a6.618 6.618 0 1 0 0 13.236A6.618 6.618 0 0 0 7.5.882zM3.5 7h8a.5.5 0 1 1 0 1h-8a.5.5 0 0 1 0-1z"
          fillRule="evenodd"
        />
      </svg>
    </div>
  </div>,
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={
        Object {
          "background": "rgba(100, 150, 250, .5)",
        }
      }
    >
      <svg
        className="euiIcon euiIcon--medium"
        focusable="false"
        height="16"
        style={
          Object {
            "fill": "#fff",
          }
        }
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.59 10.059L7.35 5.18h1.3L8.4 10.06h-.81zm.394 1.901a.61.61 0 0 1-.448-.186.606.606 0 0 1-.186-.444c0-.174.062-.323.186-.446a.614.614 0 0 1 .448-.184c.169 0 .315.06.44.182.124.122.186.27.186.448a.6.6 0 0 1-.189.446.607.607 0 0 1-.437.184zM2 14a1 1 0 0 1-.878-1.479l6-11a1 1 0 0 1 1.756 0l6 11A1 1 0 0 1 14 14H2zm0-1h12L8 2 2 13z"
          fillRule="evenodd"
        />
      </svg>
    </div>
  </div>,
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={
        Object {
          "background": "#000",
        }
      }
    >
      <svg
        className="euiIcon euiIcon--medium"
        focusable="false"
        height="16"
        style={
          Object {
            "fill": "#fff",
          }
        }
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.5 12a.502.502 0 0 1-.354-.146l-4-4a.502.502 0 0 1 .708-.708L6.5 10.793l6.646-6.647a.502.502 0 0 1 .708.708l-7 7A.502.502 0 0 1 6.5 12"
          fillRule="evenodd"
        />
      </svg>
    </div>
  </div>,
]
`;

exports[`Storyshots components/ColorDot invalid dots 1`] = `
Array [
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={Object {}}
    />
  </div>,
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={Object {}}
    />
  </div>,
  <div
    className="canvasColorDot"
  >
    <div
      className="canvasColorDot__background canvasCheckered"
    />
    <div
      className="canvasColorDot__foreground"
      style={Object {}}
    />
  </div>,
]
`;
